# Kea

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
examples/: register_example.py
kea/: _version.py
kea/axi/: __init__.py  axi_lite.py  axi_stream.py  test_axi_lite.py  test_axi_stream.py
kea/axi_lite_registers/: __init__.py  _axi_lite_handler.py  _registers.py  test_axi_lite_handler.py  test_registers.py
kea/bitfields/: _bitfield_definitions.py  _bitfield_map.py  test_bitfield_definitions.py  test_bitfield_map.py
kea/bitfields_and_registers/: __init__.py  _bitfield_definitions.py  _bitfield_map.py  register_definition.py  register_map.py  test_bitfield_definitions.py  test_bitfield_map.py  test_constant_bitfield_definitions.py  test_register_definition.py  test_register_map.py  utils.py
kea/design_utils/: __init__.py  _bitfield_definition.py  _bitfield_map.py  test_bitfield_definition.py  test_bitfield_map.py
kea/test_utils/: __init__.py  _axi_stream_types_generator.py  _random_string_generator.py  base_test.py
kea/testing/: README_myhdl.md
kea/utils/: __init__.py  _axis_buffer.py  _axis_constant_pad.py  _combined_signal_assigner.py  _constant_assigner.py  _equality_detector.py  _falling_edge_detector.py  _fifo_reader.py  _pulse_generator.py  _pulse_synchroniser.py  _ramp_towards.py  _reducing_and.py  _reducing_or.py  _rising_edge_detector.py  _signal_slicer.py  _sipo_shift_register.py  _synchronous_signal_assigner.py  _variable_width_and.py  _variable_width_or.py  _watchdog.py  (+40 more)
(+190 files in other folders)
