[project]
name = "Kea"
version = "0.9.1"
description = "A collection of useful MyHdl blocks."
authors = [
    {name = "Toby", email = "toby.gomersall@smartacoustics.co.uk"},
]
dependencies = [
    "numpy~=1.26",
    "setuptools>=80.9.0",
    "myhdl @ git+https://github.com/myhdl/myhdl.git@7dc29c242cd33cb835c336a81ffc3a461eaa92f4",
]
requires-python = "~=3.12.3"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
